ignore project files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ GD32W515P_EVAL_Demo_Suites/Projects/04_USART_Printf/MDK-ARM/RTE/
 GD32W515P_EVAL_Demo_Suites/Projects/04_USART_Printf/MDK-ARM/Objects/
 
 GD32W515P_EVAL_Demo_Suites/Projects/04_USART_Printf/MDK-ARM/Listings/
+
+GD32W515P_EVAL_Demo_Suites/Projects/04_USART_Printf/MDK-ARM/
